--- a/server/src/Inventoria.Prototype/Inventoria.Prototype.csproj
+++ b/server/src/Inventoria.Prototype/Inventoria.Prototype.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Domain\Abstractions\" />
-    <Folder Include="Application\" />
+    <ProjectReference Include="..\Inventoria.Infra.Data\Inventoria.Infra.Data.csproj" />
   </ItemGroup>
 
 </Project>
